# rsfga

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  UNRESOLVED_ISSUES.md  create_issues.sh  create_remaining_issues.sh  docker-compose.yaml  plan.md
.cargo/: audit.toml
.claude/: hookify.block-force-push-main.local.md  hookify.block-implementation-without-approval.local.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
crates/cli-compatibility-tests/: README.md
crates/compatibility-tests/: Cargo.toml  docker-compose.yml
crates/compatibility-tests/src/: lib.rs
crates/compatibility-tests/tests/: test_section_1.rs  test_section_10_check_basic.rs  test_section_11_check_complex.rs  test_section_12_batch_check.rs  test_section_13_check_performance.rs  test_section_14_expand_api.rs  test_section_15_listobjects_api.rs  test_section_16_edge_cases.rs  test_section_17_error_format.rs  test_section_18_rate_limiting.rs  test_section_19_consistency.rs  test_section_2.rs  test_section_20_limits.rs  test_section_21_grpc_setup.rs  test_section_22_grpc_parity.rs  test_section_23_grpc_features.rs  test_section_24_model_conditions.rs  test_section_25_tuple_conditions.rs  test_section_26_read_conditions.rs  test_section_27_check_conditions.rs  test_section_28_cel_edge_cases.rs  test_section_29_condition_performance.rs  test_section_3.rs  test_section_30_listusers_api.rs  test_section_31_readchanges_api.rs  test_section_32_assertions_api.rs  test_section_33_consistency_preference.rs  test_section_34_streamed_listobjects.rs  test_section_35_modular_models.rs  test_section_36_listobjects_validation.rs  test_section_4.rs  test_section_5.rs  test_section_6.rs  test_section_7_tuple_write.rs  test_section_8_tuple_read.rs  test_section_9_tuple_edge_cases.rs
crates/compatibility-tests/tests/common/: mod.rs
crates/rsfga-api/: Cargo.toml  build.rs
crates/rsfga-api/benches/: parse_bench.rs
crates/rsfga-api/proto/openfga/v1/: openfga.proto  openfga_service.proto
crates/rsfga-api/src/: adapters.rs  compatibility.rs  errors.rs  lib.rs  main.rs  utils.rs  validation.rs
crates/rsfga-api/src/grpc/: conversion.rs  converters.rs  mod.rs  server.rs  service.rs  tests.rs
crates/rsfga-api/src/http/: mod.rs  routes.rs  state.rs  tests.rs
crates/rsfga-api/src/middleware/: logging.rs  metrics.rs  mod.rs  request_id.rs  tests.rs  tracing_layer.rs
crates/rsfga-api/src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
crates/rsfga-api/tests/: assertion_cleanup_tests.rs  authorization_model_validation_tests.rs  cache_invalidation_tests.rs  cel_condition_tests.rs  concurrent_operations_tests.rs  consistency_and_model_versioning_tests.rs  cross_store_isolation_tests.rs  deployment_scenario_tests.rs  error_classification_recovery_tests.rs  error_format_tests.rs  error_handling_tests.rs  grpc_cache_invalidation_tests.rs  grpc_transport_tests.rs  http_status_code_tests.rs  input_validation_edge_cases_tests.rs  integration_tests.rs  listobjects_tests.rs  listusers_tests.rs  observability_integration_tests.rs  pagination_tests.rs  performance_integration_tests.rs  security_tests.rs  stress_tests.rs
crates/rsfga-api/tests/common/: mod.rs
crates/rsfga-domain/: Cargo.toml
crates/rsfga-domain/benches/: check_bench.rs  list_users_bench.rs
crates/rsfga-domain/fuzz/: Cargo.toml
crates/rsfga-domain/fuzz/fuzz_targets/: fuzz_list_objects.rs  fuzz_reverse_expand.rs
crates/rsfga-domain/src/: error.rs  lib.rs
crates/rsfga-domain/src/cache/: mod.rs
crates/rsfga-domain/src/cel/: cache.rs  context.rs  error.rs  expression.rs  mod.rs
crates/rsfga-domain/src/model/: mod.rs  parser.rs  type_system.rs  types.rs  types_proptest.rs
crates/rsfga-domain/src/resolver/: config.rs  context.rs  graph_resolver.rs  mod.rs  traits.rs  types.rs
crates/rsfga-domain/src/resolver/tests/: list_users_tests.rs  mocks.rs  mod.rs  resolver_tests.rs
crates/rsfga-domain/src/validation/: mod.rs
crates/rsfga-server/: Cargo.toml
crates/rsfga-server/benches/: batch_handler_bench.rs
crates/rsfga-server/src/: config.rs  lib.rs
crates/rsfga-server/src/handlers/: batch.rs  mod.rs
crates/rsfga-server/src/handlers/batch/: handler.rs  mod.rs  singleflight.rs  tests.rs  types.rs
crates/rsfga-storage/: Cargo.toml
crates/rsfga-storage/benches/: rocksdb_benchmarks.rs  storage_benchmarks.rs
crates/rsfga-storage/src/: error.rs  lib.rs  memory.rs  mysql.rs  postgres.rs  rocksdb.rs  traits.rs
crates/rsfga-storage/tests/: cockroachdb_integration.rs  mariadb_integration.rs  mysql_integration.rs  postgres_integration.rs  storage_backend_parity.rs  storage_integration.rs  testcontainers_integration.rs  tidb_integration.rs
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
deploy/prometheus/: prometheus.yml
docs/: COCKROACHDB.md  COMPATIBILITY_TEST_SPECIFICATIONS.md  DEPLOYMENT.md  MIGRATION.md  followup-issues.md
docs/design/: API_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  C4_DIAGRAMS.md  DATA_MODELS.md  EDGE_ARCHITECTURE_NATS.md  RISKS.md  ROADMAP.md
docs/issues/: http-grpc-parity-missing-tests.md
docs/plans/: 2026-01-17-mariadb-tidb-index-fix-design.md  (+1 more)
k8s-test/: databases.yaml  namespace.yaml  rsfga-deployments.yaml  run-backend-tests.sh  run-tests.sh
load-tests/: README.md
test-reports/: SUMMARY_20260117.md  cockroachdb_20260117_094341.txt  cockroachdb_20260117_110234.txt  postgres_20260117_073257.txt  postgres_20260117_073927.txt  postgres_20260117_080232.txt  postgres_20260117_093103.txt  postgres_20260117_105610.txt  postgres_20260117_121917.txt  postgres_20260117_123315.txt  postgres_20260117_124031.txt  postgres_20260117_124457.txt  postgres_20260117_125011.txt  postgres_20260117_130228.txt  postgres_20260117_130854.txt  postgres_20260117_131312.txt  postgres_20260117_133157.txt  postgres_20260117_133253.txt  postgres_final_20260117_082131.txt  postgres_full_20260117_081427.txt
tests/: test_section_1.rs
(+58 files in other folders)
