[package]
name = "compatibility-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bollard = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
