[package]
name = "rsfga-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP and gRPC API layer for RSFGA"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Internal crates
rsfga-server = { path = "../rsfga-server" }
rsfga-domain = { path = "../rsfga-domain" }
rsfga-storage = { path = "../rsfga-storage" }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
