[package]
name = "rsfga-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Request handlers and business logic for RSFGA"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Internal crates
rsfga-domain = { path = "../rsfga-domain" }
rsfga-storage = { path = "../rsfga-storage" }

# Configuration
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Metrics
metrics = { workspace = true }

# Concurrency
dashmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
async-trait = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "batch_handler_bench"
harness = false
