[package]
name = "rsfga-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage abstraction layer for RSFGA"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Async trait support
async-trait = "0.1"

# Database
sqlx = { workspace = true, features = ["chrono"] }

# Concurrency
dashmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

[dev-dependencies]
proptest = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["chrono", "runtime-tokio"] }
futures = { workspace = true }
criterion = { workspace = true }
rand = "0.8"

# Testcontainers for integration tests
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "mysql"] }

[[bench]]
name = "storage_benchmarks"
harness = false
